objects/LAT_Case__c.object
<CustomObject>
    <fields>
        <fullName>LAT_APStep__c</fullName>
        <label>AP Step</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_AR_AccountOwnerManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_AR_AccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_AR_CaseOwnerManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_AR_CreditAnalysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Analysis</label>
        <referenceTo>CRA_CredAnalysis_ARG__c</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_AR_NewAccountType__c</fullName>
        <label>Tipo de Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_AccountLink__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + LAT_Account__r.Id</formula>
        <label>Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_AccountName__c</fullName>
        <formula>LAT_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_AccountStatus__c</fullName>
        <formula>TEXT(LAT_Account__r.Status__c)</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ActionProposal__c</fullName>
        <label>Action Proposal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renovação do contrato</fullName>
                </value>
                <value>
                    <fullName>Não renovação</fullName>
                </value>
                <value>
                    <fullName>Prorrogação do contrato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Age__c</fullName>
        <formula>IF( LAT_IsClosed__c 
          ,
            FLOOR( ((LAT_ClosedDate__c - CreatedDate ) * 1440) / 60)
   
          ,
        
        FLOOR(( (now() - CreatedDate ) * 1440) / 60)
    
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_AmountType__c</fullName>
        <label>Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_PurposesAction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Allowance</fullName>
                </value>
                <value>
                    <fullName>Bonificação</fullName>
                </value>
                <value>
                    <fullName>KA Contratos</fullName>
                </value>
                <value>
                    <fullName>Off Trade - A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Direto</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Eventos</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Indireto</fullName>
                </value>
                <value>
                    <fullName>Off Trade - KA</fullName>
                </value>
                <value>
                    <fullName>Off Trade - Tático</fullName>
                </value>
                <value>
                    <fullName>On Trade - Ativação &amp; Materiais POS</fullName>
                </value>
                <value>
                    <fullName>On Trade - Contratos</fullName>
                </value>
                <value>
                    <fullName>On Trade - Eventos Nacionais</fullName>
                </value>
                <value>
                    <fullName>KA - Verba preço promocionado</fullName>
                </value>
                <value>
                    <fullName>On trade - Verba venda direta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_ApprovalRejectionDate__c</fullName>
        <label>Approval / Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_AreaManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_B2B_Direccion__c</fullName>
        <label>Dirección</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_B2B_EmailContacto__c</fullName>
        <label>Email de Contacto</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LAT_B2B_IdFiscal__c</fullName>
        <label>Id. Fiscal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_B2B_MontoEstimadoCompra__c</fullName>
        <label>Monto de compra mensual estimado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_B2B_NombreContacto__c</fullName>
        <label>Nombre de Contacto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_B2B_NombreFantasia__c</fullName>
        <label>Nombre Fantasia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_B2B_RazonSocial__c</fullName>
        <label>Razón Social</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_B2B_TelefonoContacto__c</fullName>
        <label>Teléfono de Contacto</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LAT_BR_ClientType__c</fullName>
        <label>BR Tipo Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_BR_RealValidityDate__c</fullName>
        <label>Real Validity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_BeginContractDate__c</fullName>
        <formula>LAT_Contract__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Begin Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_BreachDescription__c</fullName>
        <label>Breach (description)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_CancellationDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_CaseNumber__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LAT_CheckedOverByDisCoordinator__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CheckedOverByDisDelCustomer__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CheckedOverByDisDirector__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CheckedOverByDisManager__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CheckedOverByDisSigCustomer__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CheckedOverByRegionalFiled__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CheckedOverByTerms__c</fullName>
        <label>Checked over by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Clause__c</fullName>
        <label>Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_ClosedDate__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAT_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_CompanySignatory2__c</fullName>
        <label>Company Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CompanySignatory__c</fullName>
        <label>Company Signatory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CompanySignatureDate__c</fullName>
        <label>Company Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_ContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LAT_ContactFax__c</fullName>
        <label>Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LAT_ContactMobile__c</fullName>
        <label>Contact Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LAT_ContactPhone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LAT_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ContractDeadlineMonths__c</fullName>
        <label>Contract Deadline (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_ContractLink__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + LAT_Contract__r.Id</formula>
        <label>Contract Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ContractNumber__c</fullName>
        <formula>LAT_Contract__r.Numero_do_contrato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ContractOwnerFullName__c</fullName>
        <formula>LAT_Contract__r.Owner:User.FirstName &amp; &quot; &quot;&amp;LAT_Contract__r.Owner:User.LastName</formula>
        <label>Contract Owner Fullname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ContractStatus__c</fullName>
        <formula>TEXT(LAT_Contract__r.Status__c)</formula>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT_Contract</label>
        <referenceTo>LAT_Contract__c</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Counterparts__c</fullName>
        <label>Counterparts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_CreditAnalysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo obrigatório quando o motivo da demanda for alteração de limite de crédito.</description>
        <inlineHelpText>Campo obrigatório quando o motivo da demanda for alteração de limite de crédito.</inlineHelpText>
        <label>Credit Analysis</label>
        <referenceTo>Analise_de_credito__c</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_CustomerIsKA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if customer is a Key Account. It will be used for sharing rule &quot;Compartilha cliente filho com KA&quot;in order to share the child accounts with key accounts. It&apos;s invisible for user interface.</description>
        <label>Customer is KA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_CustomerSignatory2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signatory</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>LAT_Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_CustomerSignatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signatory</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>LAT_Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_CustomerSignatureDate__c</fullName>
        <label>Customer Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_CustomerSituation__c</fullName>
        <formula>IF ( LAT_Account__r.Overdue__c , IMAGE(&quot;https://c.cs3.content.force.com/servlet/servlet.ImageServer?id=015Q00000001OZk&amp;oid=00DQ0000000EAzg&amp;lastMod=1337614026000&quot;, &quot;Cliente inadimplente&quot;,15,150), &quot;Cliente Adimplente&quot;)</formula>
        <label>Customer Situation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_DANumber__c</fullName>
        <label>D.A Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_DataQualityDescription__c</fullName>
        <formula>IF( LAT_DataQualityScore__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( LAT_Status__c,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( LAT_Type__c ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LAT_Origin__c ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LAT_Reason__c ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LAT_Priority__c ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( LAT_Subject__c )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(LAT_Contact__c)=0,LEN( LAT_Account__c)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_DataQualityScore__c</fullName>
        <formula>IF( OR(LEN(LAT_Contact__c)=0,LEN( LAT_Account__c)=0), 0,10) + IF( ISPICKVAL( LAT_Status__c ,&quot;&quot;), 0,15) + IF( ISPICKVAL( LAT_Type__c ,&quot;&quot;), 0,15) + IF( ISPICKVAL( LAT_Origin__c ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   LAT_Reason__c ,&quot;&quot;), 0,15) + IF(ISPICKVAL(LAT_Priority__c, &quot;&quot;),0,15) + IF(LEN( LAT_Subject__c )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_DateOfExpirationOfTheValidity__c</fullName>
        <formula>LAT_Contract__r.EndDate__c</formula>
        <label>Date of expiration of the validity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_DeliveryDate__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_EndContractDate__c</fullName>
        <formula>LAT_Contract__r.EndDate__c</formula>
        <label>End Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LAT_FinancialApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_FiscalYearDescription__c</fullName>
        <formula>LAT_GroupingFiscalYear__r.Ano_Fiscal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year (description)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_GroupingFiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouping Fiscal Year</label>
        <referenceTo>Agrupamento_Fiscal_Year__c</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_InquiryHeld__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inquiry Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_IntegrationMessage__c</fullName>
        <description>Campo apenas para integração</description>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_IntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aguardando Resposta</fullName>
                </value>
                <value>
                    <fullName>Reservado</fullName>
                </value>
                <value>
                    <fullName>Erro de integração</fullName>
                </value>
                <value>
                    <fullName>Não possui Saldo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_IsAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is  Admin?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_IsClosedOnCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed When Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_IsClosed__c</fullName>
        <formula>OR(ISPICKVAL(LAT_Status__c, &quot;Aprovado&quot;) , ISPICKVAL(LAT_Status__c, &quot;Em processo de não renovação&quot;), ISPICKVAL(LAT_Status__c, &quot;Em processo de prorrogação&quot;),ISPICKVAL(LAT_Status__c, &quot;Em processo de renovação&quot;),ISPICKVAL(LAT_Status__c, &quot;Fechado e cancelado&quot;)
            ,ISPICKVAL(LAT_Status__c, &quot;Encaminhado para correções&quot;),ISPICKVAL(LAT_Status__c, &quot;Fechado e resolvido&quot;),ISPICKVAL(LAT_Status__c, &quot;EInadimplência justificada&quot;),ISPICKVAL(LAT_Status__c, &quot;Não aprovado&quot;),ISPICKVAL(LAT_Status__c, &quot;Não aprovado pelo cliente&quot;),ISPICKVAL(LAT_Status__c, &quot;Pagamento efetuado&quot;),ISPICKVAL(LAT_Status__c, &quot;Processo de prorrogação finalizado&quot;),ISPICKVAL(LAT_Status__c, &quot;Solicitação de ajuste na proposta&quot;),ISPICKVAL(LAT_Status__c, &quot;Solicitação devolvida para o Consultor&quot;),ISPICKVAL(LAT_Status__c, &quot;SClosed in Portal&quot;),ISPICKVAL(LAT_Status__c, &quot;Closed&quot;),ISPICKVAL(LAT_Status__c, &quot;Closed - First Call&quot;),ISPICKVAL(LAT_Status__c, &quot;Reprovado&quot;))</formula>
        <label>Is closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_IsEscalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_IsSelfServiceClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed by Self-Service User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_IsVisibleInSelfService__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Visible in Self-Service Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_MX_CCManagerOrExecutive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is hidden for the user and is completed by the trigger &apos;LAT_MX_CaseBeforeInsert&apos; everytime a record is inserted and is used for the Approval Process. If the Record Type of the record is &apos;LAT_MX_CSE_AccountAlterationCreditAndCollections&apos; and the Case Reason is &apos;Registration deposit cash payment&apos; and the Account related to the Case has a user in the field &apos;LAT_MX_CreditAndCollectionsExecutive__c&apos; this user is copied to this field. If the Case Reason is &apos;Payment Term Modification&apos; depending on the Channel of the Account related to the record this field is completed with the Manager of &apos;Miguel Vega&apos; or &apos;Veronica Morales&apos;.</description>
        <label>C&amp;C Manager or Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recebe o gerente do usuário (proprietário) para utilização no envio de email de alerta. Campo copiado pela trigger CasoCopiaIdGerenteRegionalArea.</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Cases6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Objective__c</fullName>
        <label>Objective</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_OccurrenceArea__c</fullName>
        <label>Occurrence Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financeiro</fullName>
                </value>
                <value>
                    <fullName>Logística</fullName>
                </value>
                <value>
                    <fullName>Outra</fullName>
                </value>
                <value>
                    <fullName>Produto</fullName>
                </value>
                <value>
                    <fullName>Vendas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_OccurrenceType__c</fullName>
        <label>Occurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_OccurrenceArea__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agend. / reagend. de entrega</fullName>
                </value>
                <value>
                    <fullName>Paletização errada</fullName>
                </value>
                <value>
                    <fullName>Pos. coleta devolução mercadoria</fullName>
                </value>
                <value>
                    <fullName>Atraso na entrega</fullName>
                </value>
                <value>
                    <fullName>Infos. sobre a previsão de entrega</fullName>
                </value>
                <value>
                    <fullName>Mercadoria faltante</fullName>
                </value>
                <value>
                    <fullName>Mercadoria/embalagem danificada</fullName>
                </value>
                <value>
                    <fullName>Recusa de recebimento</fullName>
                </value>
                <value>
                    <fullName>Infos. crédito efetuado conta cliente</fullName>
                </value>
                <value>
                    <fullName>Previsão de pagamento de verbas</fullName>
                </value>
                <value>
                    <fullName>Boleto indevido (NF devolvida)</fullName>
                </value>
                <value>
                    <fullName>Cálculo indevido no preço da NF</fullName>
                </value>
                <value>
                    <fullName>Não recebimento de boleto / 2ª via</fullName>
                </value>
                <value>
                    <fullName>Prorrogação prazo (Atraso na entrega)</fullName>
                </value>
                <value>
                    <fullName>Prorrogação prazo (Negociação)</fullName>
                </value>
                <value>
                    <fullName>Contato c/ área de Vendas p/ compra</fullName>
                </value>
                <value>
                    <fullName>Solicitação contrato de parceria</fullName>
                </value>
                <value>
                    <fullName>Solicitação devolução de mercadoria</fullName>
                </value>
                <value>
                    <fullName>Solicitação de patrocínio de eventos</fullName>
                </value>
                <value>
                    <fullName>Atend. / falta atend. área de vendas</fullName>
                </value>
                <value>
                    <fullName>Atendimento do Promotor</fullName>
                </value>
                <value>
                    <fullName>Atraso no envio de bonificações</fullName>
                </value>
                <value>
                    <fullName>Atraso no pagamento de verbas</fullName>
                </value>
                <value>
                    <fullName>Comportamento da Demonstradora</fullName>
                </value>
                <value>
                    <fullName>Falta material promoc. / sol. / prob.</fullName>
                </value>
                <value>
                    <fullName>Questionamento da política comercial</fullName>
                </value>
                <value>
                    <fullName>Descaminho</fullName>
                </value>
                <value>
                    <fullName>Qualidade</fullName>
                </value>
                <value>
                    <fullName>Suspeita de falsificação</fullName>
                </value>
                <value>
                    <fullName>Outras Solicitações</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demanda Interna PRB</fullName>
                    <default>true</default>
                    <label>Demanda Interna PRB</label>
                </value>
                <value>
                    <fullName>SAC</fullName>
                </value>
                <value>
                    <fullName>Solicitação do Cliente</fullName>
                </value>
                <value>
                    <fullName>Integração JDE</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_OtherDescription__c</fullName>
        <label>Other - Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_OwnerLink__c</fullName>
        <formula>HYPERLINK(
    IF(BEGINS(OwnerId, &apos;005&apos;), &quot;/&quot;+OwnerId ,  &quot;/p/own/Queue/d?id=&quot;+Owner:Queue.Id)   ,  
    IF(BEGINS(OwnerId, &apos;005&apos;), Owner:User.FirstName +&apos; &apos;+Owner:User.LastName ,  Owner:Queue.QueueName )
        )</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT Parent</label>
        <referenceTo>LAT_Case__c</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Presentation__c</fullName>
        <label>Presentation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Médio</fullName>
                    <default>true</default>
                    <label>Médio</label>
                </value>
                <value>
                    <fullName>Baixo</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_ProjectCloudProjectPhase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ProjectCloudProjectTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ProjectCloudProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipName>LAT_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ProjectCloudWorkedHours__c</fullName>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>